@@ -1,11 +1,14 @@
 package com.learnaws;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
-import java.util.Collections;
-import org.junit.Test;
+import static org.mockito.Mockito.*;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
-import org.mockito.Mockito;
+import org.junit.jupiter.api.Test;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 import com.amazonaws.services.lambda.runtime.Context;
 import com.amazonaws.services.lambda.runtime.LambdaLogger;
 import software.amazon.awssdk.core.sync.RequestBody;
@@ -21,20 +24,19 @@ import software.amazon.awssdk.services.sqs.model.SendMessageResponse;
 
 public class LambdaHandlerTest {
 
+    @Mock
     private S3Client s3Client;
+    @Mock
     private SqsClient sqsClient;
-    private LambdaHandler lambdaHandler;
+    @Mock
     private Context context;
+    private LambdaHandler lambdaHandler;
 
     @BeforeEach
     public void setUp() {
-        s3Client = Mockito.mock(S3Client.class);
-        sqsClient = Mockito.mock(SqsClient.class);
-        context = Mockito.mock(Context.class);
-
-        // Mock Lambda Logger
-        LambdaLogger logger = Mockito.mock(LambdaLogger.class);
-        Mockito.when(context.getLogger()).thenReturn(logger);
+        MockitoAnnotations.openMocks(this);
+        LambdaLogger logger = mock(LambdaLogger.class);
+        when(context.getLogger()).thenReturn(logger);
 
         // Instantiate LambdaHandler with mocked clients
         lambdaHandler = new LambdaHandler() {
@@ -55,18 +57,17 @@ public class LambdaHandlerTest {
         // Mock SQS message reception and response
         Message mockMessage = Message.builder().body("1").receiptHandle("handle").build();
         ReceiveMessageResponse receiveMessageResponse =
-                ReceiveMessageResponse.builder().messages(Collections.singletonList(mockMessage)).build();
-        Mockito.when(sqsClient.receiveMessage(any(ReceiveMessageRequest.class)))
+                ReceiveMessageResponse.builder().messages(List.of(mockMessage)).build();
+        when(sqsClient.receiveMessage(any(ReceiveMessageRequest.class)))
                 .thenReturn(receiveMessageResponse);
 
         // Mock SQS send message
         SendMessageResponse sendMessageResponse = SendMessageResponse.builder().build();
-        Mockito.when(sqsClient.sendMessage(any(SendMessageRequest.class)))
-                .thenReturn(sendMessageResponse);
+        when(sqsClient.sendMessage(any(SendMessageRequest.class))).thenReturn(sendMessageResponse);
 
         // Mock S3 file upload
         PutObjectResponse putObjectResponse = PutObjectResponse.builder().build();
-        Mockito.when(s3Client.putObject(any(PutObjectRequest.class), any(RequestBody.class)))
+        when(s3Client.putObject(any(PutObjectRequest.class), any(RequestBody.class)))
                 .thenReturn(putObjectResponse);
 
         // Prepare request input and invoke LambdaHandler
